# frontend-mentor-challenges

frontend-quiz-app/: .gitignore  Cargo.toml  Dioxus.toml  README.md  tailwind.config.js
frontend-quiz-app/src/: data.json  main.rs  providers.rs  routes.rs  types.rs
frontend-quiz-app/src/components/: button.rs  dark_mode.rs  header.rs  icon.rs  mod.rs  quiz_topic.rs  start_menu.rs
frontend-quiz-app/src/routes/: home.rs  quiz.rs  results.rs
