[package]
name = "frontend-quiz-app"
version = "0.1.0"
authors = ["martial-plains <41553768+martial-plains@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "1.0.0", features = ["is_variant"] }
dioxus = { version = "=0.6.0-alpha.2", features = ["router"] }

# Debug
dioxus-logger = "0.5.1"
reqwest = "0.12.7"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { version = "=0.6.0-alpha.2", features = ["desktop", "router"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { version = "=0.6.0-alpha.2", features = ["web", "router"] }
